--- a/index.htm
+++ b/index.htm
@@ -2,7 +2,7 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>plantillas web gratis</title>
+<title>pagina Alejandro Martinez</title>
 <link href="css/reset.css" rel="stylesheet" type="text/css" media="all" />
 <link href="css/typography.css" rel="stylesheet" type="text/css" media="all" />
 <link href="css/main.css" rel="stylesheet" type="text/css" />
@@ -28,68 +28,62 @@ img {border: none;}
 <div id="mainwrap">																																																																																																																																																																																																																																																																																																																				
 <!--BEGIN OF TERMS OF USE. DO NOT EDIT OR DELETE THESE LINES. IF YOU EDIT OR DELETE THESE LINES AN ALERT MESSAGE MAY APPEAR WHEN TEMPLATE WILL BE ONLINE-->
  <div id="footer_terms">
-  <h1><strong>plantillas web gratis</strong> en <a href="http://www.freeplantillas.com/"><strong>plantillas web gratis</strong></a></h1>
+  <h1><strong>Pagina Web</strong> en <a href="http://iori11.github.io"><strong>Alejandro Martinez</strong></a></h1>
  </div>
 <!--END OF TERMS OF USE-->
 	<div id="pagetop"><div id="pagetop-inner">
     	<div id="header" class="clearfix">
         	<h1 id="logo"><a href="?">Royal Store</a></h1>
-            <a href="?" id="but-green"><span>Lorem ipsum</span></a>
+            <a href="?" id="but-green"><span>Estudios</span></a>
         </div>
         <div id="mainnav" class="vernav clearfix">
         	<ul class="clearfix">
             	<li><a href="?"><span>Home</span></a></li>
-                <li><a href="?"><span>Services</span></a></li>
-                <li><a href="?"><span>Solutions</span></a></li>
-                <li><a href="?"><span>Portfolio</span></a></li>
-                <li><a href="?"><span>Contact / Help</span></a></li>
+                <li><a href="?"><span>Proyectos</span></a></li>
+                <li><a href="?"><span>Intereses</span></a></li>
+                <li><a href="?"><span>Portafolio</span></a></li>
+                <li><a href="?"><span>Contacto </span></a></li>
             </ul>
         </div>
         <div id="content">
         	<div id="content-inner">
-                <h2 id="label">webcome to our website BUYING AND SELLING NEW AND USED</h2>
-                <p style="margin-bottom: 40px;"><strong>Fusce dictum quam et nisl in hac habitasse platea 
-    fusce tristique nisi tempus lectus. Suspendisse accumsan 
-    dapibus enim. Ut non lectus. Fusce ornare dui sed magna. 
-    Sed nec dolor eget lacus fermentum gravida.</strong></p>
-                <p>Fusce dictum quam et nisl in hac habitasse platea 
-    fusce tristique nisi tempus lectus. Suspendisse accumsan 
-    dapibus enim. Ut non lectus. Fusce ornare dui sed magna. 
-    Sed nec dolor eget lacus fermentum gravida.</p>
+                <h2 id="label">Mi pagina</h2>
+                <p style="margin-bottom: 40px;"><strong>Conocimientos generales .</strong></p>
+                <p>intereses.</p>
                 </div>
         	<div class="clearfix">
-                <a href="?" class="but-grey"><span>Lorem colore</span></a>
-                <a href="?" class="but-grey"><span>Lorem colore</span></a>
-                <a href="?" class="but-grey"><span>Lorem colore</span></a>                                
+                <a href="?" class="but-grey"><span>Links</span></a>
+                <a href="?" class="but-grey"><span>Videos</span></a>
+                <a href="?" class="but-grey"><span>Paginas Amigas</span></a>                                
         	</div>
         </div>
         
     </div></div>
     <div id="pagebot" class="clearfix">
-    	<h2>Vestibulum <img src="images/bullet1.gif" alt="" style="margin-bottom: -1px" /></h2>
+    	<h2>Perfil <img src="images/bullet1.gif" alt="" style="margin-bottom: -1px" /></h2>
         <div id="box-wrap" class="clearfix">
         	<div class="box">
-            	<span class="date">04.01.09</span>
-                <p><a href="?" class="title">Curabitur pharetra dui ac dui. Etiam porta dictum felis. In a nisl in neque mattis</a></p>
+            	<span class="date">11.11.14</span>
+                <p><a href="?" class="title">s</a></p>
                 <img src="images/car1-xhdzy.jpg" class="img" alt="xhdzy" />
-                <p>Proin mattis nunc sit amet mauris. Morbi turpis. Donec nonummy, magna nec vestibulum pretium. Vivamus auctor condimentum turpis. Sed a urna. Praesent arcu quam rhoncus vestibulum nunc.</p>
+                <p>.</p>
             </div>
             <div class="box">
-            	<span class="date">04.01.09</span>
-                <p><a href="?" class="title">Curabitur pharetra dui ac dui. Etiam porta dictum felis. In a nisl in neque mattis</a></p>
-                <img src="images/car2.jpg" class="img" alt="" />
-                <p>Proin mattis nunc sit amet mauris. Morbi turpis. Donec nonummy, magna nec vestibulum pretium. Vivamus auctor condimentum turpis. Sed a urna. Praesent arcu quam rhoncus vestibulum nunc.</p>
+            	<span class="date">11.11.14</span>
+                <p><a href="?" class="title">Ingeniero de Sistemas y computacion</a></p>
+                <img src="images/hacker.jpg" class="img" alt="" />
+                <p>estoy</p>
             </div>
             <div class="box box-last">
-            	<span class="date">04.01.09</span>
-                <p><a href="?" class="title">Curabitur pharetra dui ac dui. Etiam porta dictum felis. In a nisl in neque mattis</a></p>
+            	<span class="date">11.11.14</span>
+                <p><a href="?" class="title"></a></p>
                 <img src="images/car3.jpg" class="img" alt="" />
-                <p>Proin mattis nunc sit amet mauris. Morbi turpis. Donec nonummy, magna nec vestibulum pretium. Vivamus auctor condimentum turpis. Sed a urna. Praesent arcu quam rhoncus vestibulum nunc.</p>
+                <p>Aqui.</p>
             </div>
         </div>
     </div>
     <div id="footer">
-    	&copy; Copyright 2009 Company. All right reserved
+    	&copy;  All right reserved
     </div>
 </div>
 </body>
